--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,7 @@
     "@types/node": "^18.7.8",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "@volar/vue-language-plugin-pug": "^1.6.5",
+    "@vue/language-plugin-pug": "^2.0.10",
     "dayjs": "^1.11.10",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
