--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -8,6 +8,6 @@
   },
   "compileOnSave": true,
  	"vueCompilerOptions": {
- 		"plugins": ["@volar/vue-language-plugin-pug"]
+ 		"plugins": ["@vue/language-plugin-pug"]
  	}
 }
