--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,7 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "20"
   },
   "main": "dist/src/index.js",
   "dependencies": {
@@ -19,16 +19,15 @@
     "googleapis": "^122.0.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.8.0",
-    "eslint": "^7.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint": "^9.3.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "firebase-functions-test": "^0.2.0",
-    "prettier": "^2.4.1",
+    "prettier": "^3.2.5",
     "tsc-alias": "^1.4.2",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "typescript-eslint": "^7.9.0"
   },
   "private": true
 }
