--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,7 @@
 {
   "name": "functions",
   "scripts": {
-    "lint": "eslint --ext .js,.ts .",
+    "lint": "eslint -c ./eslint.config.mjs",
     "build": "tsc && tsc-alias",
     "serve": "yarn build && firebase emulators:start --only functions",
     "shell": "yarn build && firebase functions:shell",
@@ -23,6 +23,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier-vue": "^5.0.0",
     "firebase-functions-test": "^0.2.0",
     "prettier": "^3.2.5",
     "tsc-alias": "^1.4.2",
